kubectl_deploy/cycling-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cycling-blog-db
  namespace: jacksapp-dev
  labels: 
    app: cycling-blog-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cycling-blog-db
  template:
    metadata:
      labels:
        app: cycling-blog-db
    spec: 
      containers:
      - name: cycling-blog-db
        image: bitnami/postgresql:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
