kubectl_deploy/cycling-service.yml
kind: Service
apiVersion: v1
metadata:
  name: cycling-blog-app-service
  namespace: jacksapp-dev
  labels:
    app: cycling-blog-app
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: cycling-blog-app
---
kind: Service
apiVersion: v1
metadata:
 name: cycling-blog-db-service
 namespace: jacksapp-dev
spec:
  ports:
  - name: db
    protocol: TCP
    port: 5432
    targetPort: 5432
  selector:
    app: cycling-blog-db
