kubectl_deploy/jacksapp-dev-networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-prometheus-scraping
  namespace: jacksapp-dev
spec:
  podSelector:
    matchLabels:
      app: cycling-blog-app
  policyTypes:                                                                                                                                                         
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: monitoring
